tdf#100193: Check earlier and harder whether OpenGL is good enough on Windows

If we notice early enough that OpenGL is broken or not good enough, we
can disable it and terminate with EXITHELPER_NORMAL_RESTART. Not
beautiful, but works.

The earlier added check whether shader compilation and loading of
shader program binaries from a cached file works is now just one of
the aspects that are checked.

Change-Id: I9382576cc607f1916f6002f1fa78a62e23180fe3
(cherry picked from commit 210c39dd9a6ebaa964c03c20e4b442ea36941ae9)
Reviewed-on: https://gerrit.libreoffice.org/25853
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tor Lillqvist <tml@collabora.com>
Tested-by: Tor Lillqvist <tml@collabora.com>